<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg_popup_gradient"
    android:paddingEnd="@dimen/horizontal_margin"
    android:paddingStart="@dimen/horizontal_margin">

    <TextView
        android:id="@+id/popup_title"
        style="@style/TextPrimary"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_touch_area"
        android:gravity="center_vertical"
        tools:text="Demo" />

    <Button
        android:id="@+id/popup_remove_button"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/default_touch_area"
        android:layout_below="@id/popup_title"
        android:text="@string/remove"/>

    <Button
        android:id="@+id/popup_view_details_button"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/default_touch_area"
        android:layout_below="@id/popup_title"
        android:layout_toEndOf="@id/popup_remove_button"
        android:layout_toStartOf="@+id/popup_cancel_button"
        android:text="@string/view_details"/>

    <Button
        android:id="@id/popup_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/default_touch_area"
        android:layout_below="@id/popup_title"
        android:layout_alignParentEnd="true"
        android:text="@string/cancel"/>
</RelativeLayout>